* fix size of leftmenu and wrapped content from leftmenu in a new 'div'.

--- a/www/template/default/theme/default/admin.css
+++ b/www/template/default/theme/default/admin.css
@@ -18,10 +18,11 @@ body {padding-top:60px; padding-bottom:60px;background: #fff;}
 #body-content > div {transition: all .8s cubic-bezier(0.175,0.885,0.32,1);}
 
 /* left menu. */
-.leftmenu {box-shadow:0px 2px 1px rgba(0,0,0,0.15);width: 15%;border-radius: 4px}
+.leftmenu {width: 15%;}
 .leftmenu.affix {top:60px;}
 .leftmenu.affix-bottom {position:absolute; top:auto; bottom:270px;}
-
+.leftmenu > .category-nav, .leftmenu > .nav {width: 100%; margin-bottom: 20px; box-shadow:0px 2px 1px rgba(0,0,0,0.15);}
+.leftmenu > .category-nav > .panel-body {overflow-y: auto;}
 /* panel */
 .panel {box-shadow:0px 2px 1px rgba(0,0,0,0.1);}
 .panel .table-bordered {border:none; margin-bottom: 0;}
@@ -47,7 +48,7 @@ table.tablesorter thead tr .header:after {font-family: ZenIcon; font-weight: nor
 table.tablesorter thead tr .headerSortUp:after {font-family: ZenIcon; font-weight: normal;content: " \e6b9";font-size: 14px;color:#2973EA;}
 table.tablesorter thead tr .headerSortDown:after{font-family: ZenIcon; font-weight: normal;content: " \e6b8";font-size: 14px;color:#2973EA;}
 
-.category-nav{margin-top: 90px; width: 15%;}
+
 
 /* responsive. */
 @media(max-width:998px) {.affix{position: inherit;} .leftmenu.affix{top: 0; width: 100%; margin-bottom: 20px;}}
